mybatis-plus 分页使用

--- a/spring-boot-demo-mybatis-plus/src/main/resources/application.properties
+++ b/spring-boot-demo-mybatis-plus/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=123
 
 # \u6253\u5370sql
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+# \u626B\u63CFMapper
+mybatis-plus.mapper-locations=classpath:/mapper/*Mapper.xml
